--- a/style.css
+++ b/style.css
@@ -233,7 +233,7 @@ h3 {
 
 
 .logo {
-    width: 30px;
+    height: 25px;
     margin: 0px 3px 0px 3px;
     display:inline-block;
     opacity: 0.7;
